=========================
2004-01-14 19:21:53 v0_60
=========================

  2004-01-14 19:21:53 by rcaputo; HTTP.pm 1.48

    Bump the release version to 0.60. 

  2004-01-14 19:21:27 by rcaputo; HTTP.pm 1.47

    Graham Barr discovered a problem where shutdown_output() was causing
    IIS servers to disconnect before sending responses. He suspects it's
    a race condition that only shows up over connections with
    Internet-scale latency. It didn't appear in localhost testing.
    Nevertheless, this isn't the first time where shutdown_output()
    caused problems, so I've left the call in a comment and clearly
    marked why it's that way. 

  2003-11-29 06:17:18 by rcaputo; HTTP.pm 1.46

    Apply Richard Harmon's patch, rt.cpan.org ticket 4521, to support
    "ICY" http status lines. These apparently are Shoutcast mp3 streams. 

=========================
2003-11-22 06:02:39 v0_59
=========================

  2003-11-22 06:02:39 by rcaputo; HTTP.pm 1.45; t/01_request.t 1.16

    Jeff (last name lost) discovered that redirects weren't properly
    setting the Host header for the new location. This commit fixes his
    rt.cpan.org ticket, number 3805. 

  2003-11-03 07:23:09 by rcaputo; HTTP.pm 1.44

    "Jaymes" requested that the progress indicator return raw octets
    along with the progress information. We may later want to disable the
    HTTP::Response, or to disable content building for it, to do
    progressive or streaming downloads of large things. 

=========================
2003-10-30 23:21:30 v0_57
=========================

  2003-10-30 23:21:30 by rcaputo; HTTP.pm 1.43

    Bump version for release. 

  2003-10-19 20:02:36 by rcaputo; HTTP.pm 1.42

    Add preliminary support for HTTP::HeadParser, which should better
    update base() and related headers in the HTTP::Response objects. 

  2003-10-19 20:01:55 by rcaputo; SSL.pm 1.5

    Alter the READ (and add a WRITE) function so they better follow the